--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
+    <width>500</width>
     <height>600</height>
    </rect>
   </property>
@@ -23,7 +23,7 @@
    <widget class="QLineEdit" name="lineEdit">
     <property name="geometry">
      <rect>
-      <x>250</x>
+      <x>100</x>
       <y>60</y>
       <width>300</width>
       <height>60</height>
@@ -35,15 +35,20 @@
       <bold>true</bold>
      </font>
     </property>
+    <property name="toolTip">
+     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+    </property>
     <property name="styleSheet">
-     <string notr="true">color:rgb(240,240,240);</string>
+     <string notr="true">color:rgb(240,240,240);
+align=&quot;right&quot;
+font: 18pt &quot;Segoe UI&quot;;</string>
     </property>
    </widget>
    <widget class="QPushButton" name="buttonOne">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>220</y>
+      <x>100</x>
+      <y>380</y>
       <width>60</width>
       <height>60</height>
      </rect>
@@ -71,8 +76,8 @@ color:rgb(230,230,230);</string>
    <widget class="QPushButton" name="buttonTwo">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>220</y>
+      <x>180</x>
+      <y>380</y>
       <width>60</width>
       <height>60</height>
      </rect>
@@ -100,8 +105,8 @@ color:rgb(230,230,230);</string>
    <widget class="QPushButton" name="buttonThree">
     <property name="geometry">
      <rect>
-      <x>410</x>
-      <y>220</y>
+      <x>260</x>
+      <y>380</y>
       <width>60</width>
       <height>60</height>
      </rect>
@@ -129,7 +134,7 @@ color:rgb(230,230,230);</string>
    <widget class="QPushButton" name="buttonFour">
     <property name="geometry">
      <rect>
-      <x>250</x>
+      <x>100</x>
       <y>300</y>
       <width>60</width>
       <height>60</height>
@@ -158,7 +163,7 @@ color:rgb(230,230,230);</string>
    <widget class="QPushButton" name="buttonFive">
     <property name="geometry">
      <rect>
-      <x>330</x>
+      <x>180</x>
       <y>300</y>
       <width>60</width>
       <height>60</height>
@@ -187,8 +192,8 @@ color:rgb(230,230,230);</string>
    <widget class="QPushButton" name="buttonSeven">
     <property name="geometry">
      <rect>
-      <x>250</x>
-      <y>380</y>
+      <x>100</x>
+      <y>220</y>
       <width>60</width>
       <height>60</height>
      </rect>
@@ -216,7 +221,7 @@ color:rgb(230,230,230);</string>
    <widget class="QPushButton" name="buttonSix">
     <property name="geometry">
      <rect>
-      <x>410</x>
+      <x>260</x>
       <y>300</y>
       <width>60</width>
       <height>60</height>
@@ -245,8 +250,8 @@ color:rgb(230,230,230);</string>
    <widget class="QPushButton" name="buttonEight">
     <property name="geometry">
      <rect>
-      <x>330</x>
-      <y>380</y>
+      <x>180</x>
+      <y>220</y>
       <width>60</width>
       <height>60</height>
      </rect>
@@ -274,8 +279,8 @@ color:rgb(230,230,230);</string>
    <widget class="QPushButton" name="buttonNine">
     <property name="geometry">
      <rect>
-      <x>410</x>
-      <y>380</y>
+      <x>260</x>
+      <y>220</y>
       <width>60</width>
       <height>60</height>
      </rect>
@@ -303,7 +308,7 @@ color:rgb(230,230,230);</string>
    <widget class="QPushButton" name="buttonZero">
     <property name="geometry">
      <rect>
-      <x>250</x>
+      <x>100</x>
       <y>460</y>
       <width>60</width>
       <height>60</height>
@@ -332,7 +337,7 @@ color:rgb(230,230,230);</string>
    <widget class="QPushButton" name="plusButton">
     <property name="geometry">
      <rect>
-      <x>490</x>
+      <x>340</x>
       <y>220</y>
       <width>60</width>
       <height>60</height>
@@ -361,7 +366,7 @@ color: rgb(0,0,0)</string>
    <widget class="QPushButton" name="divideButton">
     <property name="geometry">
      <rect>
-      <x>490</x>
+      <x>340</x>
       <y>460</y>
       <width>60</width>
       <height>60</height>
@@ -390,7 +395,7 @@ color: rgb(0,0,0)</string>
    <widget class="QPushButton" name="minusButton">
     <property name="geometry">
      <rect>
-      <x>490</x>
+      <x>340</x>
       <y>300</y>
       <width>60</width>
       <height>60</height>
@@ -419,7 +424,7 @@ color: rgb(0,0,0)</string>
    <widget class="QPushButton" name="timesButton">
     <property name="geometry">
      <rect>
-      <x>490</x>
+      <x>340</x>
       <y>380</y>
       <width>60</width>
       <height>60</height>
@@ -448,7 +453,7 @@ color: rgb(0,0,0)</string>
    <widget class="QPushButton" name="evalButton">
     <property name="geometry">
      <rect>
-      <x>330</x>
+      <x>180</x>
       <y>460</y>
       <width>140</width>
       <height>60</height>
@@ -479,7 +484,7 @@ font: 700 12pt &quot;Segoe UI&quot;;</string>
    <widget class="QPushButton" name="buttonLP">
     <property name="geometry">
      <rect>
-      <x>250</x>
+      <x>100</x>
       <y>140</y>
       <width>60</width>
       <height>60</height>
@@ -508,7 +513,7 @@ color:rgb(230,230,230);</string>
    <widget class="QPushButton" name="buttonRP">
     <property name="geometry">
      <rect>
-      <x>330</x>
+      <x>180</x>
       <y>140</y>
       <width>60</width>
       <height>60</height>
@@ -537,7 +542,7 @@ color:rgb(230,230,230);</string>
    <widget class="QPushButton" name="clcButton">
     <property name="geometry">
      <rect>
-      <x>490</x>
+      <x>340</x>
       <y>140</y>
       <width>60</width>
       <height>60</height>
@@ -566,7 +571,7 @@ color:rgb(0,0,0);</string>
    <widget class="QPushButton" name="powerButton">
     <property name="geometry">
      <rect>
-      <x>410</x>
+      <x>260</x>
       <y>140</y>
       <width>60</width>
       <height>60</height>
@@ -595,17 +600,24 @@ color:rgb(230,230,230);</string>
    <widget class="QLabel" name="historyLabel">
     <property name="geometry">
      <rect>
-      <x>350</x>
+      <x>200</x>
       <y>30</y>
       <width>200</width>
       <height>30</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>12</pointsize>
+      <italic>false</italic>
+      <bold>false</bold>
+     </font>
+    </property>
     <property name="toolTip">
      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p align=&quot;right&quot;&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
     </property>
     <property name="styleSheet">
-     <string notr="true">font: 9pt &quot;Segoe UI&quot;;
+     <string notr="true">font: 12pt &quot;Segoe UI&quot;;
 align=&quot;right&quot;
 margin-top:12px; margin-bottom:12px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;
 color:rgb(150,150,150);</string>
@@ -627,10 +639,16 @@ p, li { white-space: pre-wrap; }
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
+     <width>500</width>
      <height>25</height>
     </rect>
    </property>
+   <widget class="QMenu" name="menuBigInts_calculator">
+    <property name="title">
+     <string> </string>
+    </property>
+   </widget>
+   <addaction name="menuBigInts_calculator"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
