--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -659,7 +659,7 @@ p, li { white-space: pre-wrap; }
    </property>
    <widget class="QMenu" name="menuBigInts_calculator">
     <property name="title">
-     <string> </string>
+     <string/>
     </property>
    </widget>
    <addaction name="menuBigInts_calculator"/>
